# InfyFit

./: AGENTS.md  README.md  pyproject.toml
docs/: architecture.md
mobile/: .gitignore  App.tsx  README.md  app.json  package.json  tsconfig.json
mobile/src/context/: OfflineQueueContext.tsx  PreferencesContext.tsx
mobile/src/hooks/: useCameraPermission.ts  useNotifications.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: CoachScreen.tsx  MealScanScreen.tsx  OfflineSyncScreen.tsx  ProductScannerScreen.tsx  SettingsScreen.tsx  WorkoutPlannerScreen.tsx
mobile/src/services/: api.ts
mobile/src/theme/: index.ts
mobile/src/utils/: constants.ts
src/fastapi/: __init__.py  testclient.py
src/infyfit/: __init__.py  api.py  data_models.py  main.py  services.py
src/infyfit/agents/: __init__.py  coach.py  meal_scan.py  nutrition_resolver.py  offline_sync.py  privacy.py  product_scanner.py  telemetry.py  workout_planner.py
tests/: conftest.py  test_api.py
