[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infyfit"
version = "0.1.0"
description = "Reference implementation of the InfyFit agent contracts"
authors = [{name = "InfyFit"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23"
]

[tool.setuptools.packages.find]
where = ["src"]
