requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infyfit"
version = "0.2.0"
description = "Reference implementation of the InfyFit agent contracts"
authors = [{name = "InfyFit"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["src"]
